Coffee_backery_Code/css/style.css
/******************************************
/* CSS
/*******************************************/

/*Imported Fonts*/

@font-face{
  font-family: 'Volkhov';
  font-weight: 400;
  src: url('assets/Fonts/volkhov-regular-webfont.woff2') format('woff2')
       url('assets/Fonts/volkhov-regular-webfont.woff') format('woff') 
}

@font-face{
  font-family: 'Vollkorn SC';
  font-style:'Black';
  font-weight: 900;
  src: url('assets/Fonts/VollkornSC-Black.ttf') format('woff2')
}

@font-face{
  font-family: 'Vollkorn';
  font-style: Bold;
  font-weight: 700;
  src: url('assets/Fonts/vollkorn-bold-webfont.woff2') format('woff2')
       url('assets/Fonts/vollkorn-bold-webfont.woff') format('woff') 
}

/* Box Model Hack */
*{
  box-sizing: border-box;
  margin: 0px;
}

/* Normalize default*/

li, a{
  list-style: none;
  font-style: none;
  text-decoration: none;
}

ul, menu{
  padding: 0;
}
/******************************************
/* Fonts
/*******************************************/

/*Font set up*/

html{
  font-size: 62%;
}

/* Headings General*/

h1{
  font-family:'Vollkorn',serif;
  font-size: 7rem;
  font-weight: 700;
  line-height: 134px;
}

h2{
  font-family: 'Vollkorn SC',serif;
  font-size: 5rem;
  font-weight: 900;
  line-height: 89px;
}

h3{
  font-family: 'Vollkorn SC',serif;
  font-size: 3.5rem;
  font-weight: 900;
  line-height: 56px;
}

h4, a{
  font-family: 'Vollkorn SC',serif;
  font-size: 2.25rem;
  font-weight: 900;
  line-height: 34px;
}

.body-text, .come-visit-details li, footer li{
  font-family: sans-serif;
  font-size: 1.4rem;
  font-weight: 400;
  line-height: 26px;
}

.body-text-lg, .menu-options span{
  font-family: 'Volkhov', serif;
  font-size: 1.8rem;
  font-weight: 400;
  line-height: 26px;
}

.body-text, p{
  font-family: sans-serif;
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 21px;
}

a{
  font-size: 2rem;
}

.subtitle-sm{
  font-family: 'Volkhov', serif;
  font-size: 3rem;
  font-weight: 400;
  line-height: 31px;
}



/******************************************
/* LAYOUT
/*******************************************/

/*Comon properties*/

.width-100{
  width: 100%;
}

.height-100{
  height: 100%;
}

.flex-row{
  display: flex;
  flex-direction: row;
  align-items: center;
}

.flex-column{
  display: flex;
  flex-direction: column;
  align-items: center;
}

.align-text-left>*{
  text-align: left;
  width: 100%;
}

.alig-text-right{
  text-align: right;
}

/*Special pieces*/

.bg-img{
  background-image: url("assets/img/Big view Restaurant BG.png");
  background-size: cover;
  background-position: top ;
  background-color: #85b9c4;
}

.bg-img-02{
  background-image: url("assets/img/Big view Restaurant BG.png");
  background-size: cover;
  background-position: bottom ;
  background-color: #85b9c4;
}

/*Body*/

body{
  display: flex;
  flex-direction: column;
}

/*Header*/

header nav{
  justify-content: space-between;
  padding: 1%;
  text-align: center;
}

header nav>ul>*{
  width: 150px;
  padding: 0 5px;
  height: 100%;
}

.social-icons img, .social-icons a, .social-icons li{
  display: flex;
  flex-direction: row;
  align-items: center;
}

.social-icons{
  gap: 13%; 
  height: 10%;
}

.social-icons img{
  width: 150%;
}

.mini-logo{
  align-self: center;
  position:static;
  width: 330px;
}



/*Big logo section Home*/

.logo-home-section{
  justify-content: center;
  padding: 32vh;
}

.logo-home-section img{
  width: 80%;
  min-width: 950px;
  max-width: 1200px;
}

/*About Us Section*/

.about-us-styling-border{
  padding: 18px 0;
}

.about-us-section{
  min-height: 680px;
  padding: 40px 0;
}

.about-us{
  gap: 25px;
  padding: 95px 0;
  height: fit-content;

}

.about-us p{
  width: 390px;
  padding-bottom: 15px;
}

.about-us img{
  min-width: 700px;
}

/* Come Visit */

.come-visit-section{
  width: 67vh;
  min-width: 930px;
  height: 42vh;
  min-height: 550px;
  margin: 25vh auto;
  padding: 35px; 
  justify-content: start;
  background-color: rgba(72, 153, 169, 0.85) ;
}

.come-visit-details{
  justify-content: space-around;
}

.come-visit-details ul>*{
  padding: 4% 0;
}

.come-visit-details div{
  height: 80%;
}


/* Our Goods */

.our-goods-section{
  align-items: center;
}

.our-goods-section>h2{
  display: flex;
  text-align: center;
  align-items: center;
  justify-content: center;
  margin: 1.5% 0;
  height: 131px;
}

.menu-options{
  flex-wrap: wrap;
  margin: 7% 0;
}

.our-goods-section>section{
  max-width: 1120px;
  padding-bottom: 3%;
}

.menu-category-selection{
  margin-top: 8%;
  gap: 3%;
}

.menu-category-selection li{
  padding: 0 4%;
  position: relative;
}

.menu-category-selection li a{
  position: relative;
  z-index: 1;
}

.our-goods-section>section>nav ul{
  justify-content: center;
}
  
.menu-options li{
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  width: 25.33%;
  margin: 3% 4%;
  clip-path: inset(0% 0% 0% 0% round 55px);
}

.menu-options section{
  mask-composite: inherit;
}

.menu-options li div{
  position: absolute;
  padding: 22px 2%;
  width: 30%;
  background-color: #5C5444;
  border-radius: 0 0 55px 55px;
}

.menu-options li h4{
  width: 8.2em ;
}

/* Footer */

footer{
  padding: 4%;
}

.footer-section ul>*{
  padding: 4% 0;
}

.footer-section{
  justify-content: space-between;
}

/******************************************
/* ADDITIONAL STYLES
/*******************************************/

 /*Color*/

/*Page Color*/

.main-color-01{
   background-color: #F8D0A1;
 }

 .main-color-02{
  background-color:  #949C72;
 }

 .focus-color{
  background-color: #5C5444;
 }

 /*Font colors*/
 .white-text{
  color: white;
 }

 .brown-text *{
  color: #5C5444;
  ;
 }


 /******************************************
/* Interactive effects
/*******************************************/


/*Nav link buttons*/

.hoverGlow{
  text-decoration: none;
  color: #5C5444;
  position: relative;
}

.hoverGlow::after{
  content: "";
  position: absolute;
  color: white;
  left: 5%;
  bottom: 5px;
  width: 90%;
  height: 2px;
  background-color: currentColor;

  transform: scaleX(0);
  transition: transform 110ms ease-in;
}

.hoverGlow:hover > a{
  color: white;
}

.hoverGlow:hover{
  background-color: #5C5444;
  border-radius: 15px;
}

.hoverGlow:hover::after{
  transform: scaleX(0.8);
}


/*Our goods buttons*/

.menuGlow::after{
  content: "";
  position: absolute;
  height: 2px;
  width: 100%;
  background-color: currentColor;
  bottom: -5px;
  left: 0;

  transform: scaleX(0.9);
  transition: transform 60ms ease-in;
}

.menuGlow:hover::after{
  transform: scale(1.1);
}

.menuGlow:hover:after{
  content: "";
  position: absolute;
  width: 100%;
  height: 120%;
  border-radius: 15px;
  background:  rgba(72, 153, 169, 0.425);
}

